--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -35,7 +35,7 @@
 <div class="home-cat">
 <div class="owl-carousel owl-theme">
   
-  <li class="main-red" routerLink="/browse">
+  <li class="main-red" [routerLink]="['/browse','search']">
       <div class="hidden-list">
     <div class="movie-sect">
         <h2>NEW RELEASES</h2>
